--- a/app/movie/detail/template.hbs
+++ b/app/movie/detail/template.hbs
@@ -1,9 +1,34 @@
 <h1>Movie Detail</h1>
-<h2>{{model.title}}</h2>
-<p>{{model.overview}}</p>
-{{log model.genres}}
+<img src="{{image-path movie.poster_path}}" alt="">
+<h2>{{movie.title}}</h2>
+<p>{{movie.tagline}}</p>
+<h4>Overview</h4>
+<p>{{movie.overview}}</p>
+
+<h4>Genre</h4>
 <ul>
-  {{#each model.genres as |item|}}
+  {{#each movie.genres as |item|}}
   <li>{{link-to item.name "genre" item.id }}</li>
+  {{/each}}
+</ul>
+
+<h4>Cast</h4>
+<ul>
+  {{#each credits.cast as |item|}}
+  <li>{{link-to item.name "actor" item.id }}</li>
+  {{/each}}
+</ul>
+
+<h4>Similar</h4>
+<ul>
+  {{#each similar.results as |item|}}
+  <li>{{link-to item.title "movie.detail" item.id }}</li>
+  {{/each}}
+</ul>
+
+<h4>Recommendations</h4>
+<ul>
+  {{#each recommendations.results as |item|}}
+  <li>{{link-to item.title "movie.detail" item.id }}</li>
   {{/each}}
 </ul>
