--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,4 +2,7 @@
 @import "foundation-sites/foundation";
 @import "foundation-sites/util/util";
 
-@include foundation-everything;
+// @include foundation-everything;
+@include foundation-everything(true);
+@import "components/tmdb-pager";
+@import "default";
