--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,25 @@
-<header>
-  <h1>Movie Database</h1>
-</header>
-{{outlet}}
+  <div class="top-bar">
+    <div class="top-bar-title">
+      <strong>Movie Database</strong>
+    </div>
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li>{{link-to "Now Playing" "movie" (query-params list="now_playing" page=1)}}</li>
+          <li>{{link-to "Popular" "movie" (query-params list="popular" page=1)}}</li>
+          <li>{{link-to "Top Rated" "movie" (query-params list="top_rated" page=1)}}</li>
+          <li>{{link-to "Upcoming" "movie" (query-params list="upcoming" page=1)}}</li>
+        </ul>
+
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li><a href="#">Profile</a></li>
+        </ul>
+      </div>
+  </div>
+
+
+
+<div class="container">
+  {{outlet}}
+</div>
