--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,10 +4,10 @@
     </div>
       <div class="top-bar-left">
         <ul class="menu">
-          <li>{{link-to "Now Playing" "movie" (query-params list="now_playing" page=1)}}</li>
-          <li>{{link-to "Popular" "movie" (query-params list="popular" page=1)}}</li>
-          <li>{{link-to "Top Rated" "movie" (query-params list="top_rated" page=1)}}</li>
-          <li>{{link-to "Upcoming" "movie" (query-params list="upcoming" page=1)}}</li>
+          <li>{{link-to "Now Playing" "movie" "now-playing"}}</li>
+          <li>{{link-to "Popular" "movie" "popular"}}</li>
+          <li>{{link-to "Top Rated" "movie" "top-rated"}}</li>
+          <li>{{link-to "Upcoming" "movie" "upcoming"}}</li>
         </ul>
 
       </div>
