--- a/app/components/movie-card/template.hbs
+++ b/app/components/movie-card/template.hbs
@@ -1,2 +1,10 @@
-<h4>{{item.title}}</h4>
-<img src="{{image-path item.poster_path}}" alt="">
+<div class="poster">
+  <img src="{{image-path item.poster_path}}" alt="">
+</div>
+<div class="info padded">
+  <h4>{{item.title}}</h4>
+  <span>{{item.vote_average}}</span>
+
+  {{text-truncate genresToString 30}}
+  <p>{{text-truncate item.overview}}</p>
+</div>
