--- a/app/movie/index/template.hbs
+++ b/app/movie/index/template.hbs
@@ -1,22 +1,13 @@
 
-<div class="row">
-  <div class="columns medium-3">
-    <ul class="no-bullet">
-      {{#each model.genres as |item|}}
-        <li>{{link-to item.name "genre" (query-params genre=item.id)}}</li>
-      {{/each}}
-    </ul>
-  </div>
-  <div class="columns medium-9">
-    <div class="menu-centered">
+<div class="row columns">
+    {{search-bar}}
 
-    </div>
 
-    <ul class="no-bullet">
+    <ul class="no-bullet flex-column">
       {{#each movies.results   as |item|}}
       <li>
         {{#link-to "movie.detail" item.id}}
-          {{movie-card item=item}}
+          {{movie-card-compact item=item}}
         {{/link-to}}
       </li>
       {{/each}}
@@ -24,6 +15,5 @@
 
     {{tmdb-pager model=movies params=params }}
 
-  </div>
 
 </div>
