--- a/app/movie/detail/template.hbs
+++ b/app/movie/detail/template.hbs
@@ -11,7 +11,10 @@
 <h4>Overview</h4>
 <p>{{movie.overview}}</p>
 
-
+<button type="button" name="button" class="button" {{action "addToFavorites" movie}}>Add to Favorites</button>
+{{#each userService.user as |item|}}
+  {{item.id}}
+{{/each}}
 <h4>Cast</h4>
 <ul>
   {{#each cast as |item|}}
