--- a/app/testing/template.hbs
+++ b/app/testing/template.hbs
@@ -2,6 +2,7 @@
   <div class="columns medium-3">
   </div>
   <div class="columns medium-9">
+    <button type="button" name="button" class="button" {{action "test"}}>Save</button>
   </div>
 
 </div>
